Added parameter to hide copy button on tab shortcode

--- a/layouts/shortcodes/tab.html
+++ b/layouts/shortcodes/tab.html
@@ -1,4 +1,4 @@
 <div class="codeBlockWrapper tab-pane" title="{{ .Get 0 }}">
-  <button type="button" aria-label="Copy code to clipboard" class="copyButton">Copy</button>
+  {{ if .Get 1 }}<button type="button" aria-label="Copy code to clipboard" class="copyButton">Copy</button>{{ end }}
   {{ .Inner }}
 </div>
