--- a/layouts/shortcodes/figure.html
+++ b/layouts/shortcodes/figure.html
@@ -1,4 +1,5 @@
 <figure>
+    {{- if .Get "src" }}<a href="{{ .Get "src" }}">{{ end }}
     <img
     {{ with .Get "src" }}src="{{ . }}"{{ end }}
     {{ with .Get "alt" }}alt="{{ range (split . " ") }}{{ . }} {{ end }}"{{ end }}
@@ -9,5 +10,6 @@
     {{ with .Get "width" }}width="{{ . }}"{{ end }}
     {{ with .Get "height" }}height="{{ . }}"{{ end }}
     {{ with .Get "layout" }}layout="{{ . }}"{{ end }} />
+    {{- if .Get "src" }}</a>{{ end }}
     {{ with  .Get "caption" }}<figcaption>{{ . }}</figcaption>{{ end }}
-    </figure>
+</figure>
