--- a/layouts/shortcodes/example.html
+++ b/layouts/shortcodes/example.html
@@ -3,7 +3,7 @@
   <div class="scrollbar-container">
     <div class="codeBlockWrapper_2QGZ">
       {{ .Inner }}
-      <button type="button" aria-label="Copy code to clipboard" class="copyButton_1BYj">Copy</button>
+      {{ if .Get 1 }}<button type="button" aria-label="Copy code to clipboard" class="copyButton_1BYj">Copy</button>{{ end }}
     </div>
   </div>
 </div>
