Fixed rendering of pseudocode blocks

--- a/static/css/pseudocode.css
+++ b/static/css/pseudocode.css
@@ -73,6 +73,7 @@
 }
 .ps-root .ps-algorithmic.with-linenum .ps-line.ps-code {
   text-indent: -1.6em;
+  overflow: visible;
 }
 .ps-root .ps-algorithmic.with-linenum .ps-line.ps-code > span {
   text-indent: 0;
